# 27

./: pyproject.toml
app/: forms.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_initial.py  0003_ingredient_calories_ingredient_description.py
food/: settings.py  urls.py
templates/: welcome.html
users/: forms.py
users/migrations/: 0001_initial.py
